# Project-Tyto-Real-Time-Demo

./: .env.example  .gitignore  AGENTS.md  README.md  index-elevenlabs.html  index.html  pyproject.toml
examples/: score_mic.py  voice_agent.py
examples/livekit/: agent.py  app.js  index.html  token_server.py
examples/pipecat/: app.js  server.py
examples/web/: app.js  index.html  server.py
src/tyto_voice/: __init__.py  audio.py  controller.py  decision.py  env.py  livekit_provider.py  openai_realtime.py  pipecat_provider.py  prompts.py  provider.py  scorer.py
tests/: test_controller.py  test_decision.py  test_env.py  test_scorer_feed.py
