[project]
name = "tyto-voice"
version = "0.1.0"
description = "Python reference for the Tyto acoustics-aware voice-agent demo"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "aic-sdk",
    "numpy>=1.24",
    "sounddevice>=0.4",
]

[project.optional-dependencies]
# The terminal voice agent adds the OpenAI Realtime WebSocket client.
agent = ["websockets>=13"]
# The browser demo adds the web server.
web = ["websockets>=13", "aiohttp>=3.9"]
# The Pipecat browser demo: a Pipecat pipeline (OpenAI Realtime) over WebRTC.
# pipecat-ai 1.4 requires Python >=3.11, so it is gated by a marker; the rest of
# the project still supports 3.10. Install this extra on Python 3.11+.
pipecat = [
    "pipecat-ai[openai,webrtc]>=1.4; python_version >= '3.11'",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]
# Everything, plus the test runner.
dev = ["websockets>=13", "aiohttp>=3.9", "pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tyto_voice"]

[tool.pytest.ini_options]
testpaths = ["tests"]
